--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,7 @@
 <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="app.css">
-
 <div class="login-wrap">
 	<div class="login-html">
-		
+		<img src="logo.jpg"><hr>
 		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
 		<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
 		<div class="login-form">
